<resources>
    <string name="app_name">AlumniHub</string>
    <string name="get_started">Get Started</string>
    <string name="alumni_hub">AlumniHub</string>
    <string name="description_splash">Join the largest Alumni networking community</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="login">Login</string>
    <string name="connectMsg">Connect with the right mentors you need</string>
    <string name="sign_up">Sign Up</string>
    <string name="community">Community</string>
    <string name="materials">Materials</string>
    <string name="posts">Posts</string>
    <string name="profile_user">Profile</string>
    <string name="search_user">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_profiles">Search Profiles...</string>
    <string name="job_posts">Job Posts</string>
    <string name="social_posts">Social Posts</string>
    <string name="event_posts">Event Posts</string>
    <string name="posts_caption">Caption</string>
    <string name="job_post_form">Post Job Opening</string>
    <string name="edit_user_data">Edit Info</string>
    <string name="enter_message">Enter Message</string>
    <string name="sign_out">Sign Out</string>
</resources>