<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PostsFragment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tab_layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/job_posts_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_posts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/social_posts_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_posts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/event_posts_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_posts" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/posts_content_place"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>