<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".activities.SplashScreen">

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/alumniHubTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alumni_hub"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="245dp"
        android:layout_height="67dp"
        android:gravity="center"
        android:text="@string/description_splash"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alumniHubTextView" />

    <ImageView
        android:id="@+id/topArcImg"
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_arc" />

    <ImageView
        android:id="@+id/girlImgView"
        android:layout_width="268dp"
        android:layout_height="362dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/girl" />

</androidx.constraintlayout.widget.ConstraintLayout>